    - build: default to using a path-prefixed PCP_PYTHON_PROG
    - build: fix several makefile clean targets for deb packagers
    - build: configure.ac update to autoconf 2.71
    - build: add tarball upload to release workflow
    - docs: pmie updates to explain action behaviour with archives
    - docs: retire "archive log" phrase from man pages and books

pcp-6.0.5 (26 June 2023)
    - pmie: ensure pmie.log.YYYYMMDD is owned by pcp:pcp
    - pcp2json: extend pcp2json with an option to send HTTP POSTs
    - pmlogger: fix pidfile update; pmlogger.pid is for primary only
    - pmdumptext: fix scaling when -i command line option is used
    - pmlogextract: improve resilience in corner-case conditions
    - pmdasmart: additional NVME power state metrics
    - pmdasmart: additional NVME disk information metrics
    - pmdasmart: update help with proper description of DC status
    - pmdasmart: filter out zram devices when probing for devices
    - pmdahacluster: handle pacemaker 2.1.5 crm_mon output changes
    - pmcd: improve debugging flags and diagnostics in general
    - libpcp_pmda: refactor and improve library diagnostics
    - selinux: updates to policy for pmlogger and pmlogger_daily
    - build: switch rpm spec files to SPDX license identifiers
    - build, qa: numerous updates to improve PCP on OpenBSD
    - build: switch from registry.centos.org to quay.io for el6/el7
    - ci: add centos6 back into the fold as its on quay.io now
    - ci: add Debian 12, drop Ubuntu 16 and Fedora 35

pcp-6.0.4 (15 May 2023)
    - pmcd: propogate a new PMCD_HOSTNAME_CHANGE flag to clients
    - pmdumplog: support preferred alternate name pmlogdump
    - pmlogger: changes to accommodate PMCD_HOSTNAME_CHANGE
    - pmlogger_janitor: new script called from pmlogger_check
    - pmlogger: add -d directory argument for alternate naming schemes
    - pmlogrewrite: fix remaining corner case for indom renumbering
    - pmie: changes to accommodate PMCD_HOSTNAME_CHANGE